--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div id="pre_loader">
+        <span class="span"></span>
+      </div>
+    </div>
   </body>
 </html>
